--- a/components/Gallery/Gallery.module.css
+++ b/components/Gallery/Gallery.module.css
@@ -47,12 +47,17 @@
     height: 8px;
     border-radius: 50px;
     background-color: #fff;
+    cursor: pointer;
+}
+
+.activeBullet {
+    background-color: #8c5cff;
 }
 
 @media screen and (min-width:1200px) {
     .galleryContainer {
         width: 1200px;
-        padding: 40px 80px;
+        padding: 40px 80px 80px;
     }
 
     .galleryBox {
@@ -83,8 +88,6 @@
 
     /* Активна картка — масштаб х2 */
     .active {
-        /* transform: scale(2);
-        transition: transform 0.3s ease; */
         width: 400px;
         height: 356px;
     }
