--- a/components/Contact/Contact.module.css
+++ b/components/Contact/Contact.module.css
@@ -18,6 +18,10 @@
     margin-bottom: 24px;
 }
 
+.contactMob {
+    width: 288px;
+}
+
 .contactDesk {
     display: none;
 }
@@ -62,8 +66,6 @@
 }
 
 @media screen and (min-width:1200px) {
-
-
 
     .contactTitle {
         margin-bottom: 32px;
