--- a/components/Faq/Faq.module.css
+++ b/components/Faq/Faq.module.css
@@ -19,12 +19,14 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
+    align-items: center;
 }
 
 .faqListItem {
     box-shadow: 0 3px 2px 0 rgba(0, 0, 0, 0.4);
     background-color: #fff;
     border-radius: 24px;
+    width: 288px;
 }
 
 .faqListItem:nth-child(1) .boxOne {
@@ -78,6 +80,10 @@
 @media screen and (min-width:1200px) {
     .faqContainer {
         padding: 40px 80px 80px;
+        width: 1040px;
+    }
+
+    .faqListItem {
         width: 1040px;
     }
 
