--- a/components/Features/Features.module.css
+++ b/components/Features/Features.module.css
@@ -21,7 +21,7 @@
 .featuresList {
     display: flex;
     flex-direction: column;
-    padding: 0 16px;
+    padding: 0 23px;
     gap: 16px;
 }
 
@@ -29,6 +29,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    width: 242px;
 }
 
 .featuresListItem:last-child>div {
@@ -78,5 +79,6 @@
     .featuresListItemBox {
         padding-bottom: 16px;
         border: none;
+
     }
 }
